@@ -5,6 +5,9 @@ lambkit-1.0.4:
 新增：新增Auth插件实现的Api路由的用户和权限控制
 新增：新增Api路由的用户和权限控制接口
 新增：新增CallBack方面事件回调
+新增：实现整站gateway代理
+新增：shiro集成token管理能力
+新增：添加启动打印应用名称
 优化：优化ApiJwtAuthInterceptor，Auth无参数注解默认为登陆用户才能访问。
 优化：优化Mgedb功能，提供多mgrdb服务管理能力
 优化：LambkitModule加入registerEngine，registerRequestMapping注册函数，方便注解的注册
@@ -15,6 +18,8 @@ lambkit-1.0.4:
 优化：优化NodeManager初始化效率
 优化：优化LambkitHandler中的request，确保RequestManager一致性
 修复：修复mgedb移除meta后的注册问题
+修复：tomcat9下面websocket地址冲突
+修复：修改非网络下启动错误
 
 -----------------------------
 lambkit-1.0.3:
